--- a/at-form-input.html
+++ b/at-form-input.html
@@ -1,6 +1,6 @@
 ﻿
-<link rel="import" href="/components/polymer/polymer.html" />
-<link rel="import" href="/components/at-core-theme/at-core-theme.html" />
+<link rel="import" href="../polymer/polymer.html" />
+<link rel="import" href="../at-core-theme/at-core-theme.html" />
 
 <polymer-element name="at-form-input">
   <template>
