#571 at-form-input migrate to 0.8 - improved handling of valid / invalid state

--- a/at-form-input.html
+++ b/at-form-input.html
@@ -71,6 +71,10 @@
       },
       valueChanged: function (n, o) {
         this.$.input.value = n;
+        this.updateValidState();
+      },
+      updateValidState: function () {
+        this.invalid = this.required && (this.value === undefined || this.value === '');
       },
       invalidChanged: function (newValue, oldValue) {
         this.toggleClass('error', newValue, this.$.field);
