--- a/demo.html
+++ b/demo.html
@@ -45,6 +45,20 @@
       <at-form-input name="pera" type="text" label="This is disabled input" placeholder="this is placeholder..." disabled></at-form-input>
     </p>
   </div>
+  <div>
+    <h4>Example 4: required and value set programmatically</h4>
+    <p>Value being set is whitespace <code>"          "</code> </p>
+    <p>
+      <at-form-input id="programmatic1" name="pera" type="text" label="This is required input" placeholder="this is placeholder..." required></at-form-input>
+    </p>
+  </div>
+  <div>
+    <h4>Example 5: required and value set programmatically</h4>
+    <p>Value being set is not whitespace <code>"this is not whitespace"</code> </p>
+    <p>
+      <at-form-input id="programmatic2" name="pera" type="text" label="This is required input" placeholder="this is placeholder..." required></at-form-input>
+    </p>
+  </div>
   <script>
     document.addEventListener('WebComponentsReady', function (e) {
 
@@ -54,11 +68,14 @@
       firstAFI.addEventListener('value-changed', function (e) {
         valueEcho.innerHTML = e.detail.value;
       });
-    });
 
-    function echoValueChanged(e) {
-      debugger;
-    }
+      var programmatic = document.getElementById('programmatic1');
+      programmatic.value = "                   ";
+      programmatic.value = "          ";
+
+      var programmatic2 = document.getElementById('programmatic2');
+      programmatic2.value = "This is not whitespace";
+    });
   </script>
 </body>
 
