#589 at-form#0.8-preview - updated the at-form-input to validate itself on blur event

--- a/at-form-input.html
+++ b/at-form-input.html
@@ -100,6 +100,10 @@
         this.$.input.addEventListener('change', function (e) {
           _self.value = _self.$.input.value;
         });
+        this.$.input.addEventListener('blur', function (e) {
+          _self.value = _self.$.input.value;
+          _self.validate();
+        });
         // update the initial valid state of the element
         // if the element is required but empty valid state should be false
         // but no visual indication should be shown
