#602 at-core-form disabled - fixed the css issues as part of disabled investigation

--- a/at-form-input.html
+++ b/at-form-input.html
@@ -94,7 +94,7 @@
       },
 
       _isReady: false,
-
+      _scopeCssViaAttr: true,
       ready: function () {
         var _self = this;
         this.$.input.addEventListener('change', function (e) {
