#731 at-form-* hideTitle - implemented hideTitle property - added a demo

--- a/demo.html
+++ b/demo.html
@@ -59,6 +59,10 @@
       <at-form-input id="programmatic2" name="pera" type="text" label="This is required input" placeholder="this is placeholder..." required></at-form-input>
     </p>
   </div>
+  <div>
+    <h4>Example 6: hidden label demo</h4>
+    <at-form-input label="This is hidden label" placeholder="this is hidden label placeholder..." required hide-title="true"></at-form-input>
+  </div>
   <script>
     document.addEventListener('WebComponentsReady', function (e) {
 
