--- a/at-form-input.html
+++ b/at-form-input.html
@@ -2,11 +2,21 @@
 <link rel="import" href="../at-core-theme/at-core-theme.html" />
 
 <dom-module id="at-form-input">
+  <style>
+    .hide-label {
+      display: none;
+    }
+    #labelContainer > label {
+      font-weight: bold;
+    }
+  </style>
   <template>
     <at-core-theme></at-core-theme>
     <div class="ui form">
-      <div id="field" class="field">
+      <div class="" id="labelContainer">
         <label id="label">{{label}}</label>
+      </div>
+      <div id="field" class="field">
         <input id="input" name$="{{name}}" type$="{{type}}" placeholder$="{{placeholder}}" />
       </div>
     </div>
@@ -30,6 +40,12 @@
         value: '',
         notify: true,
         observer: 'valueChanged'
+      },
+
+      hideTitle: {
+        type: Boolean,
+        value: false,
+        observer: 'hideTitleChanged'
       },
 
       /*
@@ -96,6 +112,9 @@
 
     _isReady: false,
     _scopeCssViaAttr: true,
+    hideTitleChanged: function(newValue, oldValue) {
+      this.toggleClass("hide-label", newValue, this.$.labelContainer);
+    },
     ready: function() {
       var _self = this;
       this.$.input.addEventListener('change', function(e) {
