--- a/at-form-input.html
+++ b/at-form-input.html
@@ -1,6 +1,11 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../at-core-theme/at-core-theme.html" />
 
+<!--
+@element at-form-input
+at-form-input represents an input element on the form
+-->
+
 <dom-module id="at-form-input">
   <style>
     .hide-label {
@@ -28,7 +33,8 @@
   Polymer({
     is: 'at-form-input',
     properties: {
-      /*
+      /**
+       * @property value
        * Element's required status for element validation purposes
        * notify: true outside world should be notified that element's value has changed
        * this is achieved via autoamtic value-changed event
@@ -41,6 +47,9 @@
         notify: true,
         observer: 'valueChanged'
       },
+      /**
+       * @property hideTitle
+       */
 
       hideTitle: {
         type: Boolean,
@@ -48,7 +57,7 @@
         observer: 'hideTitleChanged'
       },
 
-      /*
+      /**
        * Element's valid state for element validation purposes
        * notify: true - outside world should be notified when element's valid state changes
        * readOnly: true - outside world is not able to change element's status since its element's internal state
@@ -60,7 +69,7 @@
         notify: true
       },
 
-      /*
+      /**
        * Element's required state for element validation purposes
        */
       required: {
@@ -68,7 +77,7 @@
         value: false
       },
 
-      /*
+      /**
        * Element's disabled state
        */
       disabled: {
@@ -77,7 +86,7 @@
         observer: 'disabledChanged'
       },
 
-      /*
+      /**
        * Element's name for form submission purposes
        */
       name: {
@@ -85,7 +94,7 @@
         value: ''
       },
 
-      /*
+      /**
        * Element's type for element display and validation purposes
        */
       type: {
@@ -93,7 +102,7 @@
         value: 'text'
       },
 
-      /*
+      /**
        * Element's label for element display purposes
        */
       label: {
@@ -101,7 +110,7 @@
         value: ''
       },
 
-      /*
+      /**
        * Element's placeholder text for element display purposes
        */
       placeholder: {
