--- a/at-form-input.html
+++ b/at-form-input.html
@@ -8,7 +8,7 @@ at-form-input represents an input element on the form
 
 <dom-module id="at-form-input">
   <style>
-    .hide-label {
+    .hidden {
       display: none;
     }
 
@@ -150,6 +150,17 @@ at-form-input represents an input element on the form
       placeholder: {
         type: String,
         value: ''
+      },
+      /**
+       * Hides the element. When hidden nothing is displayed for the element
+       * @property hide
+       * @type Boolean
+       * @default false
+       */
+      hide: {
+        type: Boolean,
+        value: false,
+        observer: 'hideChanged'
       }
     },
 
@@ -159,7 +170,11 @@ at-form-input represents an input element on the form
      * @method hideLabelChanged
      */
     hideLabelChanged: function(newValue, oldValue) {
-      this.toggleClass("hide-label", newValue, this.$.labelContainer);
+      this.toggleClass("hidden", newValue, this.$.labelContainer);
+    },
+    hideChanged: function (newValue, oldValue) {
+      var wrapper = Polymer.dom(this.root).querySelector('.ui.form');
+      this.toggleClass('hidden', newValue, wrapper);
     },
     /**
      * @method ready
