AT-238 fixed imports -- updated bower for 0.8

--- a/breaking-value-changed.html
+++ b/breaking-value-changed.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../tangere/tangere.html">
 <link rel="import" href="../at-form-text/at-form-text.html">
 <link rel="import" href="../at-form-checkbox/at-form-checkbox.html">
 <link rel="import" href="../at-form-password/at-form-password.html">
